# learn_opengl

./: CMakeLists.txt
include/: camera.hpp  shader.hpp
shader/: GouraudFragment.fsh  GouraudVertex.vsh  fragment.fsh  lightFragment.fsh  vertex.vsh  viewSpaceFragment.fsh  viewSpaceVertex.vsh
src/: main.cpp
